--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 CORS_ORIGIN=*
 MONGODB_URI=mongodb+srv://vishvender:<db_password>@cluster0.2huzy.mongodb.net
+ACCESS_TOKEN_SECRET=a-complex-string
+ACCESS_TOKEN_EXPIRY=1-day
+REFRESH_TOKEN_SECRET=chai-aur-code
+REFRESH_TOKEN_EXPIRY=10-day
