--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=a-complex-string
 ACCESS_TOKEN_EXPIRY=1-day
 REFRESH_TOKEN_SECRET=chai-aur-code
 REFRESH_TOKEN_EXPIRY=10-day
+CLOUDINARY_CLOUD_NAME= someName
+CLOUDINARY_API_KEY= 12345678
+CLOUDINARY_API_SECRET= ************
